# cry_html_chic

./: .gitignore  README.md  STRUCTURE.md  Singapore Open Data Licence  pyproject.toml
Backend/: __init__.py  requirements.txt
Backend/DataCleaning/: __init__.py  data_cleaning_optimizer.py
Backend/data/heatmap/: population.json
Backend/ingest/cache/: hashlib.py
Backend/ingest/scripts/: generate_passenger_flow.py  generate_population_heatmap.py  generate_station_flow.py
Backend/ingest/sources/: datamall_linkfile.py  osm_overpass.py
Doc/: AGENT.md  AI_COLLABORATION.md  API_SPECIFICATION.md  BACKEND_GUIDE.md  DATA_CLEANING.md  DATA_STRUCTURE.md  DEVELOPMENT_WORKFLOW.md  FRONTEND_GUIDE.md  GIT_WORKFLOW.md  STRUCTURE.md  TESTING_DEBUG.md  前端开发规划.md
Doc/api/: API_OVERVIEW.md  API_README.md  health.md  passenger-flow.md
Frontend/: index.html
Frontend/css/: main.css  theme-dark.css  theme-light.css
Frontend/data/: bus_stops.js  passenger_flow.js  population_heatmap.js  routes.js  station_flow.js
Frontend/js/: api.js  config.js  main.js
Frontend/js/map/: layers.js  map.js
Frontend/js/timeline/: player.js  timeline.js
Frontend/js/ui/: panel.js  sidebar.js  tooltip.js
Frontend/js/utils/: helpers.js
Frontend/js/visualization/: colorScale.js  flowMaskRenderer.js  flowRenderer.js  heatmapRenderer.js
backend/ingest/: __init__.py  wiring.py
backend/ingest/cache/: interface.py  (+2 more)
configs/: routes.json
configs/ingest/: bus_jobs.json  default.json  default_example.json  passenger_flow.json  routes_geo_osm.json  sg_heatmap.json
scripts/: export_routes_data.py  export_routes_from_scripts_data.py  install-pyproject.ps1  install-pyproject.sh
tests/test_backend_ingest/: test_import_split_bruteforce.py  test_module_identity.py
(+160 files in other folders)
